src/objects/Expenses_Name__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Expenses Names</relationshipLabel>
        <relationshipName>Expenses_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GST_Number__c</fullName>
        <label>GST Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Items_Purchased__c</fullName>
        <label>Items Purchased</label>
        <type>TextArea</type>
    </fields>
    <label>Expenses Name</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EXP{0000}</displayFormat>
        <label>Pre-fix EM</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GST_Validation</fullName>
        <active>true</active>
        <description>Please enter Valid GST number	Field</description>
        <errorConditionFormula>NOT( REGEX(  GST_Number__c  , &quot;[0-9]{2}[A-Za-z]{5}[0-9]{4}[A-Za-z]{1}[0-9]{1}[A-Za-z]{1}[0-9]{1}&quot;))</errorConditionFormula>
        <errorDisplayField>GST_Number__c</errorDisplayField>
        <errorMessage>Please enter Valid GST number	Field</errorMessage>
    </validationRules>
</CustomObject>